[style] Fix postlist year alignment for Neo Tokyo theme

--- a/src/assets/scss/exceptions/_themes.scss
+++ b/src/assets/scss/exceptions/_themes.scss
@@ -501,7 +501,7 @@
 	.postlist-yeargroup {
 		margin-block-end: 0.5em;
 		margin-inline-start: calc(var(--size-m) * -1);
-		padding-block: 0.125em 0;
+		padding-block: 0.125em;
 		padding-inline: var(--size-m);
 
 		font-size: 1.25em;
@@ -512,6 +512,7 @@
 
 	.callout-label {
 		width: fit-content;
+		padding-block-end: 0; // Heading font doesn't sit right in the middle
 		padding-inline: var(--size-m) var(--size-l);
 
 		&::before {
